{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 38,
  "lineage": "ad91899b-de75-4b58-839d-f33313905b88",
  "resources": [
    {
      "module": "module.launch_configuration",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-awx-private-was",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-03ce7cea29f4854a4",
            "description": "2-Tier WAS security group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "SG-awx-private-was"
                ]
              }
            ],
            "id": "sg-03ce7cea29f4854a4",
            "name": "SG-awx-private-was",
            "tags": {
              "Name": "SG-awx-private-was"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          }
        }
      ]
    },
    {
      "module": "module.launch_configuration",
      "mode": "data",
      "type": "aws_security_group",
      "name": "sg-awx-private-web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:374456436099:security-group/sg-0eaeac0be1bf71d1a",
            "description": "1-Tier Web security group",
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "SG-awx-private-web"
                ]
              }
            ],
            "id": "sg-0eaeac0be1bf71d1a",
            "name": "SG-awx-private-web",
            "tags": {
              "Name": "SG-awx-private-web"
            },
            "vpc_id": "vpc-0b0b2defe7d7e67e3"
          }
        }
      ]
    }
  ]
}